test/sema/typeck/var/undefined-variable1.out
error: unknown identifier `a`.
--> undefined-variable1.dora:1:19
 | fn f() { let _b = a; }
                     ~
 | 
1 error found.
